--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         
         /* ÚJ HATALMAS KÉP DIZÁJN */
         .album-card { padding: 0; overflow: hidden; display: flex; flex-direction: column; }
-        .album-img { width: 65px; height: 65px; border-radius: 10px; object-fit: cover; margin-right: 20px; background: rgba(0,0,0,0.5); border: 2px solid rgba(255,255,255,0.2); }
+        .album-img-large { width: 100%; max-width: 280px; height: auto; border-radius: 12px; box-shadow: 0 6px 15px rgba(0,0,0,0.5); margin-bottom: 20px; border: 2px solid rgba(255,255,255,0.1); background: rgba(0,0,0,0.5); }
         .album-info-box { padding: 20px; box-sizing: border-box; width: 100%; }
         .album-title-large { font-size: 24px; font-weight: bold; color: #fff; margin-bottom: 15px; text-align: center; }
         
