--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         .list-item:active { transform: scale(0.98); }
         
         .album-card { padding: 0; overflow: hidden; display: flex; flex-direction: column; }
-        .album-img-large { width: 100%; max-width: 280px; height: auto; border-radius: 12px; box-shadow: 0 6px 15px rgba(0,0,0,0.5); margin-bottom: 20px; border: 2px solid rgba(255,255,255,0.1); background: rgba(0,0,0,0.5); }
+        .album-img-large { width: 100%; max-height: 280px; height: auto; object-fit: contain; border-bottom: 3px solid #e09f3e; background: rgba(0,0,0,0.8); display: block; }
         .album-info-box { padding: 20px; box-sizing: border-box; width: 100%; }
         .album-title-large { font-size: 24px; font-weight: bold; color: #fff; margin-bottom: 15px; text-align: center; }
         
@@ -713,3 +713,4 @@ const firebaseConfig = {
 </body>
 
 </html>
+
