--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ const firebaseConfig = {
             }
             sendPasswordResetEmail(auth, email).then(() => {
                 errorDiv.style.color = "#28a745"; // Zöld szín a sikernek
-                errorDiv.textContent = "Password reset email sent! Check your inbox.";
+                errorDiv.textContent = "Password reset email sent! Check your inbox and your SPAM folder too.";
             }).catch((error) => {
                 errorDiv.style.color = "#ff6b6b";
                 errorDiv.textContent = "Error: " + error.message;
@@ -746,4 +746,5 @@ const firebaseConfig = {
         }
     </script>
 </body>
+
 </html>
