--- a/index.html
+++ b/index.html
@@ -176,14 +176,15 @@
         import { getFirestore, doc, setDoc, getDoc, updateDoc, collection, query, where, getDocs, increment } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore.js";
 
         // IDE MÁSOLD BE A SAJÁT KULCSODAT!
-        const firebaseConfig = {
-            apiKey: "IDE_JÖN_A_TE_KULCSOD",
-            authDomain: "tundra-csere.firebaseapp.com",
-            projectId: "tundra-csere",
-            storageBucket: "tundra-csere.appspot.com",
-            messagingSenderId: "123456789",
-            appId: "1:123456789:web:abcdef"
-        };
+const firebaseConfig = {
+  apiKey: "AIzaSyDeEK5nOuvuELtGd61Q7W04uKGcJqG1L1U",
+  authDomain: "tundra-album.firebaseapp.com",
+  projectId: "tundra-album",
+  storageBucket: "tundra-album.firebasestorage.app",
+  messagingSenderId: "469371801375",
+  appId: "1:469371801375:web:71007b232a98fe8bdbea2a",
+  measurementId: "G-2LQT9X23X5"
+};
 
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
