--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         .quick-nav-container::-webkit-scrollbar { display: none; } 
         .quick-nav-item { flex: 0 0 auto; width: 80px; text-align: center; cursor: pointer; opacity: 0.5; transition: all 0.2s; }
         .quick-nav-item.active { opacity: 1; transform: scale(1.05); border-bottom: 2px solid #e09f3e; padding-bottom: 5px; }
-        .quick-nav-img { width: 100%; height: 50px; object-fit: cover; border-radius: 6px; border: 1px solid rgba(255,255,255,0.2); background: rgba(0,0,0,0.5); }
+        .quick-nav-img { width: 100%; height: 50px; object-fit: contain; border-radius: 6px; border: 1px solid rgba(255,255,255,0.2); background: rgba(0,0,0,0.5); padding: 2px; box-sizing: border-box; }
         .quick-nav-title { font-size: 10px; color: #fff; margin-top: 4px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
     </style>
 </head>
@@ -130,10 +130,11 @@
     </div>
 
     <div id="main-app-screen" class="container" style="display: none;">
-        <div id="top-bar">
+<div id="top-bar">
             <div style="text-align: left;">
                 <h3 style="margin: 0; color:#e09f3e;" id="display-name"></h3>
-                <small style="color: #ccc;"><span class="t-state">State</span>: <b id="display-server" style="color:#fff;"></b> | <span class="t-alliance">Alliance</span>: <b id="display-alliance" style="color:#fff;"></b></small>
+                <small style="color: #ccc; display: block; margin-bottom: 8px;"><span class="t-state">State</span>: <b id="display-server" style="color:#fff;"></b> | <span class="t-alliance">Alliance</span>: <b id="display-alliance" style="color:#fff;"></b></small>
+                <button id="logout-btn" class="btn btn-back t-btn-logout" style="margin: 0; padding: 4px 10px; font-size: 12px;">Logout</button>
             </div>
             <div>
                 <select id="lang-selector">
@@ -162,12 +163,7 @@
         <div id="view-cards" style="display: none;"></div>
         <div id="view-puzzle" style="display: none;"></div>
         <div id="view-search-results" style="display: none;"></div>
-        <div id="view-matchmaker" style="display: none;"></div>
-
-        <br><hr>
-        <button id="save-inventory-btn" class="btn btn-green t-btn-save" style="font-size: 18px; padding: 15px; box-shadow: 0 4px 15px rgba(40, 167, 69, 0.4);">💾 Save Changes</button>
-        <br><br>
-        <button id="logout-btn" class="btn btn-back t-btn-logout" style="width: auto; background: transparent;">Logout</button>
+<div id="view-matchmaker" style="display: none;"></div>
     </div>
 
     <script type="module">
@@ -197,13 +193,13 @@ const firebaseConfig = {
         window.currentCardGlobal = null;
 
         const i18n = {
-            en: { state: "State", alliance: "Alliance", btnClan: "🤝 Search in Alliance", btnState: "🌍 Search in State", btnGlobal: "🌌 Search in All States", searchPh: "🔍 Search album or card...", btnSave: "💾 Save Changes", btnLogout: "Logout", backAlbum: "⬅ Back to Albums", backCard: "⬅ Back to Cards", markDone: "✔ Set missing to 1", cardsOwnedInfo: "Completed Cards", givesYou: "They can give you:", asksFrom: "They ask from you:", traded: "Traded!", noMatch: "No matching players found. (Note: Trades only appear if you have 2+ of a piece, and they have 0!)" },
-            hu: { state: "Állam", alliance: "Szövetség", btnClan: "🤝 Keresés Szövetségben", btnState: "🌍 Keresés Államban", btnGlobal: "🌌 Keresés Minden Államban", searchPh: "🔍 Keresés albumra vagy kártyára...", btnSave: "💾 Változások Mentése", btnLogout: "Kijelentkezés", backAlbum: "⬅ Vissza az Albumokhoz", backCard: "⬅ Vissza a Kártyákhoz", markDone: "✔ Hiányzók 1-re állítása", cardsOwnedInfo: "Ezek a kártyák megvannak", givesYou: "Tud adni neked:", asksFrom: "Kéri tőled:", traded: "Elcseréltük!", noMatch: "Nincs találat a cserepartnerekre. (Tipp: Cseréhez legalább 2 db kell valamiből!)" },
-            de: { state: "Staat", alliance: "Allianz", btnClan: "🤝 Suche in Allianz", btnState: "🌍 Suche im Staat", btnGlobal: "🌌 Suche in Allen Staaten", searchPh: "🔍 Album suchen...", btnSave: "💾 Speichern", btnLogout: "Abmelden", backAlbum: "⬅ Zurück", backCard: "⬅ Zurück", markDone: "✔ Fehlende auf 1", cardsOwnedInfo: "Komplette Karten", givesYou: "Kann dir geben:", asksFrom: "Fragt von dir:", traded: "Gehandelt!", noMatch: "Keine passenden Spieler gefunden." },
-            fr: { state: "État", alliance: "Alliance", btnClan: "🤝 Chercher dans l'Alliance", btnState: "🌍 Chercher dans l'État", btnGlobal: "🌌 Chercher dans Tous les États", searchPh: "🔍 Chercher...", btnSave: "💾 Sauvegarder", btnLogout: "Déconnexion", backAlbum: "⬅ Retour", backCard: "⬅ Retour", markDone: "✔ Marquer à 1", cardsOwnedInfo: "Cartes complètes", givesYou: "Peut vous donner:", asksFrom: "Vous demande:", traded: "Échangé!", noMatch: "Aucun joueur correspondant." },
-            tr: { state: "Eyalet", alliance: "İttifak", btnClan: "🤝 İttifakta Ara", btnState: "🌍 Eyalette Ara", btnGlobal: "🌌 Tüm Eyaletlerde Ara", searchPh: "🔍 Ara...", btnSave: "💾 Kaydet", btnLogout: "Çıkış Yap", backAlbum: "⬅ Albümlere Dön", backCard: "⬅ Kartlara Dön", markDone: "✔ Eksikleri 1 yap", cardsOwnedInfo: "Tamamlanan kartlar", givesYou: "Sana verebilir:", asksFrom: "Senden istiyor:", traded: "Takas edildi!", noMatch: "Eşleşen oyuncu bulunamadı." },
-            ru: { state: "Штат", alliance: "Альянс", btnClan: "🤝 Поиск в альянсе", btnState: "🌍 Поиск в штате", btnGlobal: "🌌 Поиск во всех штатах", searchPh: "🔍 Поиск...", btnSave: "💾 Сохранить", btnLogout: "Выйти", backAlbum: "⬅ Назад", backCard: "⬅ Назад", markDone: "✔ На 1", cardsOwnedInfo: "Собранные карты", givesYou: "Может дать вам:", asksFrom: "Просит у вас:", traded: "Обменялись!", noMatch: "Игроков не найдено." },
-            ar: { state: "حالة", alliance: "تحالف", btnClan: "🤝 البحث في التحالف", btnState: "🌍 البحث في الولاية", btnGlobal: "🌌 البحث في كل الولايات", searchPh: "🔍 البحث...", btnSave: "💾 حفظ التغييرات", btnLogout: "تسجيل خروج", backAlbum: "⬅ العودة", backCard: "⬅ العودة", markDone: "✔ تعيين إلى 1", cardsOwnedInfo: "بطاقات مكتملة", givesYou: "يمكن أن يعطيك:", asksFrom: "يطلب منك:", traded: "تم التبادل!", noMatch: "لم يتم العثور على لاعبين." }
+            en: { state: "State", alliance: "Alliance", btnClan: "🤝 Search in Alliance", btnState: "🌍 Search in State", btnGlobal: "🌌 Search in All States", searchPh: "🔍 Search album or card...", btnSave: "💾 Save Changes", btnLogout: "Logout", backAlbum: "⬅ Back to Albums", backCard: "⬅ Back to Cards", markDone: "✔ Set missing to 1", cardsOwnedInfo: "Completed Cards", givesYou: "They can give you:", asksFrom: "They ask from you:", traded: "Traded!", noMatch: "No matching players found. (Note: Trades only appear if you have 2+ of a piece, and they have 0!)", tradeWarning: "⚠️ Only click 'Traded!' if the exchange actually happened in the game!" },
+            de: { state: "Staat", alliance: "Allianz", btnClan: "🤝 Suche in Allianz", btnState: "🌍 Suche im Staat", btnGlobal: "🌌 Suche in Allen Staaten", searchPh: "🔍 Album suchen...", btnSave: "💾 Speichern", btnLogout: "Abmelden", backAlbum: "⬅ Zurück", backCard: "⬅ Zurück", markDone: "✔ Fehlende auf 1", cardsOwnedInfo: "Komplette Karten", givesYou: "Kann dir geben:", asksFrom: "Fragt von dir:", traded: "Gehandelt!", noMatch: "Keine passenden Spieler gefunden.", tradeWarning: "⚠️ Klicke nur auf 'Traded!', wenn der Tausch im Spiel stattfand!" },
+            fr: { state: "État", alliance: "Alliance", btnClan: "🤝 Chercher dans l'Alliance", btnState: "🌍 Chercher dans l'État", btnGlobal: "🌌 Chercher dans Tous les États", searchPh: "🔍 Chercher...", btnSave: "💾 Sauvegarder", btnLogout: "Déconnexion", backAlbum: "⬅ Retour", backCard: "⬅ Retour", markDone: "✔ Marquer à 1", cardsOwnedInfo: "Cartes complètes", givesYou: "Peut vous donner:", asksFrom: "Vous demande:", traded: "Échangé!", noMatch: "Aucun joueur correspondant.", tradeWarning: "⚠️ Ne cliquez sur 'Échangé' que si l'échange a eu lieu dans le jeu !" },
+            tr: { state: "Eyalet", alliance: "İttifak", btnClan: "🤝 İttifakta Ara", btnState: "🌍 Eyalette Ara", btnGlobal: "🌌 Tüm Eyaletlerde Ara", searchPh: "🔍 Ara...", btnSave: "💾 Kaydet", btnLogout: "Çıkış Yap", backAlbum: "⬅ Albümlere Dön", backCard: "⬅ Kartlara Dön", markDone: "✔ Eksikleri 1 yap", cardsOwnedInfo: "Tamamlanan kartlar", givesYou: "Sana verebilir:", asksFrom: "Senden istiyor:", traded: "Takas edildi!", noMatch: "Eşleşen oyuncu bulunamadı.", tradeWarning: "⚠️ Yalnızca oyun içinde takas gerçekleştiyse 'Takas edildi!' butonuna tıklayın!" },
+            hu: { state: "Állam", alliance: "Szövetség", btnClan: "🤝 Keresés Szövetségben", btnState: "🌍 Keresés Államban", btnGlobal: "🌌 Keresés Minden Államban", searchPh: "🔍 Keresés albumra vagy kártyára...", btnSave: "💾 Változások Mentése", btnLogout: "Kijelentkezés", backAlbum: "⬅ Vissza az Albumokhoz", backCard: "⬅ Vissza a Kártyákhoz", markDone: "✔ Hiányzók 1-re állítása", cardsOwnedInfo: "Ezek a kártyák megvannak", givesYou: "Tud adni neked:", asksFrom: "Kéri tőled:", traded: "Elcseréltük!", noMatch: "Nincs találat a cserepartnerekre. (Tipp: Cseréhez legalább 2 db kell valamiből!)", tradeWarning: "⚠️ Csak akkor kattints a 'Traded!' gombra, ha a játékban is megtörtént a csere!" },            
+ru: { state: "Штат", alliance: "Альянс", btnClan: "🤝 Поиск в альянсе", btnState: "🌍 Поиск в штате", btnGlobal: "🌌 Поиск во всех штатах", searchPh: "🔍 Поиск...", btnSave: "💾 Сохранить", btnLogout: "Выйти", backAlbum: "⬅ Назад", backCard: "⬅ Назад", markDone: "✔ На 1", cardsOwnedInfo: "Собранные карты", givesYou: "Может дать вам:", asksFrom: "Просит у вас:", traded: "Обменялись!", noMatch: "Игроков не найдено.", tradeWarning: "⚠️ Нажимайте 'Обменялись!' только если обмен уже произошел в игре!" },
+            ar: { state: "حالة", alliance: "تحالف", btnClan: "🤝 البحث في التحالف", btnState: "🌍 البحث في الولاية", btnGlobal: "🌌 البحث في كل الولايات", searchPh: "🔍 البحث...", btnSave: "💾 حفظ التغييرات", btnLogout: "تسجيل خروج", backAlbum: "⬅ العودة", backCard: "⬅ العودة", markDone: "✔ تعيين إلى 1", cardsOwnedInfo: "بطاقات مكتملة", givesYou: "يمكن أن يعطيك:", asksFrom: "يطلب منك:", traded: "تم التبادل!", noMatch: "لم يتم العثور على لاعبين.", tradeWarning: "⚠️ انقر فقط على 'تم التبادل!' إذا حدث التبادل بالفعل في اللعبة!" }
         };
         window.currLang = 'en';
 
@@ -712,17 +708,6 @@ darabszamok: [12, 15, 15, 15, 15, 18, 18, 18, 18]
             triggerAutoSave();
         }
 
-        document.getElementById('save-inventory-btn').addEventListener('click', async () => {
-            const toast = document.getElementById('toast-msg');
-            try {
-                await updateDoc(doc(db, "jatekosok", window.currentUserUid), { inventory: window.userInventory });
-                toast.textContent = "✅ Saved!";
-                toast.classList.add("show");
-                setTimeout(() => toast.classList.remove("show"), 2000);
-                updateTradeBadges();
-            } catch (error) { console.error(error); }
-        });
-
         async function runMatchmaker(scope) {
             hideAllViews();
             const viewMatchmaker = document.getElementById('view-matchmaker');
@@ -788,7 +773,12 @@ darabszamok: [12, 15, 15, 15, 15, 18, 18, 18, 18]
 
                 viewMatchmaker.innerHTML = '';
                 viewMatchmaker.appendChild(backBtn);
-                viewMatchmaker.insertAdjacentHTML('beforeend', `<h3>${scope === 'alliance' ? '🤝 ' + myAlliance : (scope === 'state' ? '🌍 ' + myServer : '🌌 All States')}</h3>`);
+                viewMatchmaker.insertAdjacentHTML('beforeend', `
+                    <h3>${scope === 'alliance' ? '🤝 ' + myAlliance : (scope === 'state' ? '🌍 ' + myServer : '🌌 All States')}</h3>
+                    <p style="color: #ffc107; font-size: 13px; font-weight: bold; background: rgba(0,0,0,0.5); padding: 10px; border-radius: 8px; border: 1px solid #ffc107; margin-bottom: 20px;">
+                        ${i18n[window.currLang].tradeWarning}
+                    </p>
+                `);
 
                 if (hasMatches) {
                     viewMatchmaker.insertAdjacentHTML('beforeend', resultsHtml);
