--- a/index.html
+++ b/index.html
@@ -757,17 +757,21 @@ let statusHtml = '';
             }
             const progressPct = Math.round((collectedPieces / card.pieceCount) * 100);
 
+            // A felirat és a sáv szorosan egymás mellé kerül
             viewPuzzle.insertAdjacentHTML('beforeend', `
-                <div style="display: flex; justify-content: space-between; align-items: flex-end; margin-bottom: 15px;">
-                    <h3 style="text-align:left; margin: 0;"><small style="color:#e09f3e;">${aName}</small><br>${card.name}</h3>
-                    <div style="width: 120px; text-align: right;">
-                        <div style="position: relative; width: 100%; height: 18px; background: rgba(0,0,0,0.6); border-radius: 10px; overflow: hidden; border: 1px solid rgba(255,255,255,0.2); box-shadow: inset 0 1px 3px rgba(0,0,0,0.5);">
-                            <div id="puzzle-prog-fill" style="width: ${progressPct}%; height: 100%; background: linear-gradient(90deg, #28a745, #34ce57); transition: width 0.3s ease;"></div>
-                            <div id="puzzle-prog-txt" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; font-size: 11px; font-weight: bold; color: white; text-shadow: 1px 1px 2px black; pointer-events: none;">
-                                ${collectedPieces} / ${card.pieceCount}
+                <div style="margin-bottom: 15px; text-align: left;">
+                    <h3 style="margin: 0; display: flex; flex-direction: column; gap: 5px;">
+                        <small style="color:#e09f3e; font-size: 14px;">${aName}</small>
+                        <div style="display: flex; align-items: center; flex-wrap: wrap; gap: 10px;">
+                            <span>${card.name}</span>
+                            <div style="width: 120px; position: relative; height: 18px; background: rgba(0,0,0,0.6); border-radius: 10px; overflow: hidden; border: 1px solid rgba(255,255,255,0.2); box-shadow: inset 0 1px 3px rgba(0,0,0,0.5);">
+                                <div id="puzzle-prog-fill" style="width: ${progressPct}%; height: 100%; background: linear-gradient(90deg, #28a745, #34ce57); transition: width 0.3s ease;"></div>
+                                <div id="puzzle-prog-txt" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; font-size: 11px; font-weight: bold; color: white; text-shadow: 1px 1px 2px black; pointer-events: none;">
+                                    ${collectedPieces} / ${card.pieceCount}
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    </h3>
                 </div>
             `);
             // --------------------------------------------------------
